# couaincre

./: Cargo.toml  LICENSE  build.rs  test.cnf
cryptominisat-rs/: build.rs  result
ind_set/: hash-10-7.cnf  hash-8.cnf
src/: counter.rs  main.rs  problem.rs  restricted.rs  sampler.rs  tree_decomposition.rs  utils.rs
src/restricted/: constraint.rs  equals.rs  heuristics.rs  mod.rs  restricted.rs  xor.rs
src/tree_decomposition/: contraction.rs  mod.rs  td.rs  td_heuristic.rs
