[package]
name = "couaincre"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = ">=4.5.5", features = ["derive"] }
rustsat = { version = ">=0.7.5", features = ["fxhash"] }
rustsat-tools = ">=0.7.5"
rustc-hash = ">=2.1.1"
malachite-base = "0.9.1"
log = "0.4"
env_logger = "0.11"
clap-verbosity-flag = "3.0"

[dependencies.malachite]
version = "0.9.1"
default-features = false
features = ["naturals_and_integers"]
